--- a/sites/start.thunderbird.net/daily/index.html
+++ b/sites/start.thunderbird.net/daily/index.html
@@ -36,11 +36,11 @@
     <div class="feature-box">
       <h3>{{ _('Take Precautions') }}</h3>
       <ul>
-        <li>Prioritize frequent, thorough backups of your daily profile.</li>
-        <li>Expect very frequent, disruptive updates and install strictly to a daily-specific directory.</li>
-        <li>Limit mail filters to a single daily profile, or preferably, avoid them.</li>
-        <li>Assume most add-ons won't work.</li>
-        <li>Avoid using POP accounts with daily. If necessary, configure to leave messages on the server indefinitely.</li>
+        <li>{{ _('Prioritize frequent, thorough backups of your daily profile.') }}</li>
+        <li>{{ _('Expect very frequent, disruptive updates and install strictly to a daily-specific directory.') }}</li>
+        <li>{{ _('Limit mail filters to a single daily profile, or preferably, avoid them.') }}</li>
+        <li>{{ _('Assume most add-ons won’t work.') }}</li>
+        <li>{{ _('Avoid using POP accounts with daily. If necessary, configure to leave messages on the server indefinitely.') }}</li>
       </ul>
     </div>
   </section>
