--- a/sites/start.thunderbird.net/daily/index.html
+++ b/sites/start.thunderbird.net/daily/index.html
@@ -12,17 +12,17 @@
 {% block channel_link %}
   <a id="release-channel" href="#">{{ _('Daily Channel') }}</a>
 {% endblock %}
-<a id="donate-top" href="#">
-  {{ svg('report') }} {{ _('Report Issues') }}
+<a id="donate-top" href="{{ url('thunderbird.bugzilla.new-bug') }}">
+  {{ svg('start/bell-ring') }} {{ _('Report Issues') }}
 </a>
   <header>
     <div id="logo" class="logo-img">{{ svg('logo-daily') }}</div>
     <h1>{{ _('Sharing <span class="gradient-text">Freedom</span>') }}</h1>
     <p class="tagline">{{ _('Thunderbird is a gift from thousands of people like you. By using our Daily release and reporting issues, you contribute to that gift of productivity, privacy, and freedom to the world. Thank you!') }}</p>
     <div class="btn-set">
-      <a class="btn" href="https://www.thunderbird.net/participate/">{{ svg('base/icons/menu/documentation') }} {{ _('Read Docs') }}</a>
-      <a class="btn" href="#">{{ svg('report') }} {{ _('Report Issues') }}</a>
-      <a class="btn" href="https://support.mozilla.org/questions/new/thunderbird">{{ svg('chat') }} {{ _('Discuss') }}</a>
+      <a class="btn" href="{{ url('participate.desktop.docs') }}">{{ svg('start/docs') }} {{ _('Read Docs') }}</a>
+      <a class="btn" href="{{ url('thunderbird.bugzilla.new-bug') }}">{{ svg('start/bell-ring') }} {{ _('Report Issues') }}</a>
+      <a class="btn" href="{{ url('participate.discuss.desktop.daily') }}">{{ svg('chat') }} {{ _('Discuss') }}</a>
     </div>
   </header>
 
@@ -30,7 +30,7 @@
     <div class="feature-box">
       <h3>{{ _('Know the Risks First') }}</h3>
       <p class="subhead">{{ _('Thunderbird Daily is for development.') }}</p>
-      <p>{{ _('Thunderbird Daily is not intended for general use. As a precaution, assume it will be unstable and result in data loss. We recommend you <a href="%(forum_url)s">join the Daily forum</a> to keep up to date with any news.') | format(forum_url='https://thunderbird.topicbox.com/groups/daily') }}
+      <p>{{ _('Thunderbird Daily is not intended for general use. As a precaution, assume it will be unstable and result in data loss. We recommend you <a href="%(forum_url)s">join the Daily forum</a> to keep up to date with any news.') | format(forum_url=url('participate.discuss.desktop.daily')) }}
       </p>
     </div>
     <div class="feature-box">
