--- a/sites/start.thunderbird.net/release/index.html
+++ b/sites/start.thunderbird.net/release/index.html
@@ -26,7 +26,7 @@
     <h1>{{ _('Welcome to <span class="gradient-text">Freedom</span>') }}</span></h1>
     <p class="tagline">{{ _('Thunderbird is a gift from thousands of people like you. We hope you\'ll enjoy the productivity, privacy, and freedom they make possible and we invite you to become part of that gift to others.') }}</p>
     <div class="btn-set">
-      <a class="btn" href="https://www.thunderbird.net/participate/">{{ svg('base/icons/menu/participate') }} {{ _('Participate') }}</a>
+      <a class="btn" href="https://www.thunderbird.net/participate/">{{ svg('start/participate') }} {{ _('Participate') }}</a>
       <a class="btn" href="{{ redirect_donate_url(form_id=fru_form_id, campaign=utm_campaign, medium=utm_medium, source=utm_source, content='cta-middle', location='thunderbird.donate.form.desktop', show_donation_modal=False) }}">{{ svg('donate-heart') }} {{ _('Donate') }}</a>
       <a class="btn" href="https://support.mozilla.org/questions/new/thunderbird">{{ svg('handshake') }} {{ _('Get Help') }}</a>
     </div>
