Match release notes link to selected channel on downloads page. (Fixes #798)

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -136,8 +136,8 @@
                   <a class="small-link dotted" href="{{ url('thunderbird.sysreq', latest_thunderbird_version) }}">{{ _('System Requirements') }}</a>
                 </li>
                 <li>
-                  <a class="small-link dotted" href="{{ thunderbird_url('releasenotes', default_channel) }}">{{ _('Release Notes') }}</a>
-                </li>
+                  <a id="release-notes-link" class="small-link dotted" href="{{ thunderbird_url('releasenotes', default_channel) }}">{{ _('Release Notes') }}</a>
+                  </li>
               </ul>
             </div>
           </div>
