--- a/sites/start.thunderbird.net/_base-resp.html
+++ b/sites/start.thunderbird.net/_base-resp.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="noindex">
     <title>{% filter striptags|e %}{% block title %}{% endblock %}{% endfilter %}</title>
     {{ l10n_css() }}
-    <link href="/media/css/start-style.css" rel="stylesheet" type="text/css" />
+    <link href="/media/css/start-style2025.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="start-bg">
     <main>
