--- a/sites/start.thunderbird.net/release/index.html
+++ b/sites/start.thunderbird.net/release/index.html
@@ -15,12 +15,14 @@
 
 {% block main %}
 <div id="start-page">
-{% block channel_link %}
-  <a id="release-channel" href="#">{{ _('ESR Channel') }}</a>
-{% endblock %}
-<a id="donate-top" href="{{ redirect_donate_url(form_id=fru_form_id, campaign=utm_campaign, medium=utm_medium, source=utm_source, content='cta-top', location='thunderbird.donate.form.desktop', show_donation_modal=False) }}">
-  {{ svg('donate-btn-heart') }} {{ _('Donate') }}
-</a>
+  <div class="top-links">
+    {% block channel_link %}
+      <a id="release-channel" href="#">{{ _('ESR Channel') }}</a>
+    {% endblock %}
+    <a id="donate-top" href="{{ redirect_donate_url(form_id=fru_form_id, campaign=utm_campaign, medium=utm_medium, source=utm_source, content='cta-top', location='thunderbird.donate.form.desktop', show_donation_modal=False) }}">
+      {{ svg('donate-btn-heart') }} {{ _('Donate') }}
+    </a>
+  </div>
   <header>
     <div id="logo" class="logo-img">{{ svg('logo') }}</div>
     <h1>{{ _('Welcome to <span class="gradient-text">Freedom</span>') }}</span></h1>
