--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -132,7 +132,7 @@
         <div class="section-text">
           <h3>{{ _('Calendar, Contacts, and Tasks') }}</h3>
           <h4>{{ _('Because email is just one part of being productive.') }}</h4>
-          <p>{{ _('Thunderbird helps your manage your appointments, contacts, and tasks. Stay organized, productive, and connected in one place.') }}</p>
+          <p>{{ _('Thunderbird helps you manage your appointments, contacts, and tasks. Stay organized, productive, and connected in one place.') }}</p>
         </div>
       </div>
       <div class="two-columns">
