--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -182,14 +182,17 @@
           {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Design Specialist'), 'Jesse Miksic', high_res_img('thunderbird/staff/jesse_miksic.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Software Engineer, Desktop'), 'Justin Tracey', high_res_img('thunderbird/staff/justin_tracey.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Technical PM'), 'Kelly McSweeney', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, UI/UX Design Studio'), 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Manager, Customer Support Operations'), 'Lisa Wess', high_res_img('thunderbird/staff/lisa_wess.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Web Services'), 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, People Operations & Strategy'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Services'), 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Manager, Community Programs'), 'Michael Ellis', high_res_img('thunderbird/staff/michael_ellis.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Communications & Engagement Coordinator'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Marketing & Communications'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Mobile Engineering'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',))) }}
