--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -163,11 +163,12 @@
           {{ job_block(_('Managing Director, Operations'), 'Lisa McCormack', high_res_img('thunderbird/staff/lisa_mccormack.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Managing Director, Product'), 'Ryan Sipes', high_res_img('thunderbird/staff/ryan_sipes.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Director, Desktop & Mobile Apps'), 'Alessandro Castellani', high_res_img('thunderbird/staff/alessandro_castellani.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Director, Infrastructure & Services'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Director, Web Services'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',)), True) }}
 
           {# Alphabetical by first name #}
           {{ job_block(_('Sr. Software Engineer, Services'), 'Alejandro Aspinwall', high_res_img('thunderbird/staff/alejandro_aspinwall.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Engineer, Desktop'), 'Alex Schmitz', high_res_img('thunderbird/staff/alexander_schmitz.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Principal Engineer'), 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Finance & Accounting Specialist'), 'Anthony Macchia', high_res_img('thunderbird/staff/anthony_macchia.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Software Engineer, Mobile'), 'Ashley Soucar', high_res_img('thunderbird/staff/ashley_soucar.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Ben Campbell', high_res_img('thunderbird/staff/ben_campbell.png', scale='2x', optional_attributes={'class': 'pixel'})) }}
@@ -182,17 +183,19 @@
           {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. UX Design Specialist'), 'Jesse Miksic', high_res_img('thunderbird/staff/jesse_miksic.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Software Engineer, Desktop'), 'Justin Tracey', high_res_img('thunderbird/staff/justin_tracey.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Technical PM'), 'Kelly McSweeney', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, UI/UX Design Studio'), 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Manager, Customer Support Operations'), 'Lisa Wess', high_res_img('thunderbird/staff/lisa_wess.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Web Services'), 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, People Operations & Strategy'), 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Desktop'), 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Staff Software Engineer, Services'), 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Manager, Community Programs'), 'Michael Ellis', high_res_img('thunderbird/staff/michael_ellis.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Communications & Engagement Coordinator'), 'Monica Ayhens-Madon', high_res_img('thunderbird/staff/monica_ayhens_madon.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Manager, Marketing & Communications'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
-          {{ job_block(_('Sr. Manager, Mobile Engineering'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr Software Engineer, Mobile'), 'Rafael Tonholo', high_res_img('thunderbird/staff/rafael_tonholo.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Product Designer'), 'Rebecca Taylor', high_res_img('thunderbird/staff/rebecca_taylor.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Test'), 'Rob Wood', high_res_img('thunderbird/staff/rob_wood.png', scale='2x', alt_formats=('webp',))) }}
