Small fixes and improvements for the new Start page. (Fixes #877)

--- a/sites/start.thunderbird.net/_base-resp.html
+++ b/sites/start.thunderbird.net/_base-resp.html
@@ -11,8 +11,8 @@
     {{ l10n_css() }}
     <link href="/media/css/start-style2025.css" rel="stylesheet" type="text/css" />
   </head>
-  <body class="start-bg">
-    <main>
+  <body>
+    <main id="start-page">
       {% block main %}{% endblock %}
     </main>
   </body>
