--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -198,11 +198,13 @@
           {{ job_block(_('Manager, Marketing & Communications'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr Software Engineer, Mobile'), 'Rafael Tonholo', high_res_img('thunderbird/staff/rafael_tonholo.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Product Designer'), 'Rebecca Taylor', high_res_img('thunderbird/staff/rebecca_taylor.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Software Engineer, Desktop'), 'Regina Donovan', high_res_img('thunderbird/staff/regina_donovan.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Test'), 'Rob Wood', high_res_img('thunderbird/staff/rob_wood.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Site Reliability Engineer'), 'Ryan Jung', high_res_img('thunderbird/staff/ryan_jung.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Customer Experience Specialist'), 'Sarah Regenspan', high_res_img('thunderbird/staff/sarah_regenspan.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Associate Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr. Release Engineer'), 'Stephen King', high_res_img('thunderbird/staff/stephen_king.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Employee Experience Specialist'), 'Tarandeep Kaur', high_res_img('thunderbird/staff/tarandeep_kaur.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Desktop Engineering'), 'Toby Pilling', high_res_img('thunderbird/staff/toby_pilling.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Software Engineer, Mobile'), 'Todd Heasley', high_res_img('thunderbird/staff/todd_heasley.png', scale='2x', alt_formats=('webp',))) }}
